# inteligentni-sistemi

./: .gitattributes  README.md  SaksofonInteligentni sistemi.docx  main.py  pyproject.toml
code/audio/dag/: Y.npy  create-X-Y.py  create-spectograms.py  evaluate.py  execution.py  functions.py  label_map.npy
code/audio/dag/test-normalize-data/A (1)/: A (1)_001_aug_0.npy  A (1)_002_aug_0.npy  A (1)_004_aug_0.npy
code/audio/dag/test-normalize-data/A# (1)/: A# (1)_000_aug_0.npy  A# (1)_002_aug_0.npy  A# (1)_006_aug_0.npy
code/audio/dag/test-normalize-data/B/: B_000_aug_0.npy  B_001_aug_0.npy  B_002_aug_0.npy  B_003_aug_0.npy  B_005_aug_0.npy
code/audio/dag/test-normalize-data/C (1)/: C (1)_004_aug_0.npy  C (1)_006_aug_0.npy  C (1)_007_aug_0.npy  C (1)_011_aug_0.npy
code/audio/dag/test-normalize-data/C# (1)/: C# (1)_003_aug_0.npy  C# (1)_004_aug_0.npy  C# (1)_006_aug_0.npy  C# (1)_007_aug_0.npy  C# (1)_008_aug_0.npy
code/audio/dag/test-normalize-data/C2 (1)/: C2 (1)_001_aug_0.npy  C2 (1)_003_aug_0.npy  C2 (1)_004_aug_0.npy  C2 (1)_005_aug_0.npy
code/audio/dag/test-normalize-data/D (1)/: D (1)_000_aug_0.npy  D (1)_001_aug_0.npy  (+5 more)
code/audio/original/: note-extraction.py  note-frequency.txt
code/image/: create-X-Y.py  create-spectograms.py
code/image/model/: X.npy  Y.npy  api.py  create.py  evaluate.py  label_map.npy  melody-terminal.py  melody-test.py  melody.py  ml-melody-test.py  sax_output.mid  sax_output.xml  terminal-ml.py  terminal.py  test.py
doc/: B.npy  C.npy  F.npy  plot.py
sausau/: extract-data.py  generated_melodies.csv
ui/: index.html
(+74 files in other folders)
