[project]
name = "sax-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "flask>=3.1.3",
    "librosa>=0.11.0",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "sounddevice>=0.5.5",
    "soundfile>=0.14.0",
    "tensorflow>=2.21.0",
]
